# Eidolon-Assist

./: .gitignore  README.md  eidolon_assist.py  index.html  particles.js  pyproject.toml  requirements.txt
homepage/: index.html  main.js  styles.css
references/: eidolon assist plan.md  groq-whisperapi-reference.py  openai-api-reference.py
